--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   sim:
-    image: martenseemann/quic-network-simulator
+    image: sim
     container_name: sim
     hostname: sim
     stdin_open: true
