Allow volumes for logs to be configured

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     stdin_open: true
     tty: true
     volumes:
-      - ../$SERVER/logs/server:/logs
+      - $LOGDIR/logs/server:/logs
     environment:
       - ROLE=server
       - SERVER_PARAMS=$SERVER_PARAMS
@@ -49,7 +49,7 @@ services:
     stdin_open: true
     tty: true
     volumes:
-      - ../$CLIENT/logs/client:/logs
+      - $LOGDIR/logs/client:/logs
     environment:
       - ROLE=client
       - CLIENT_PARAMS=$CLIENT_PARAMS
