--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       - ROLE=server
       - SERVER_PARAMS=$SERVER_PARAMS
       - CURTIME=$CURTIME
+      - COMMIT=$SV_COMMIT
     depends_on:
       - sim
     cap_add: 
@@ -57,6 +58,7 @@ services:
       - ROLE=client
       - CLIENT_PARAMS=$CLIENT_PARAMS
       - CURTIME=$CURTIME
+      - COMMIT=$CL_COMMIT
     depends_on:
       - sim
       - server
