Added volume to keep pcap files + rename pcap files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     stdin_open: true
     tty: true
     volumes:
-      - ./logs/sim:/logs
+      - $SERVER_LOGS:/logs
     environment:
       - SCENARIO=$SCENARIO
     cap_add: 
